third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16408.disassembled
//**** Cross-compiled for `masm` syntax from `tests/no-v1-comparison/closures/bug_16408.move`

//# publish
// Bytecode version v8
module 0xc0ffee::m
// Function definition at index 0
fun make_func_1(): |u64||u64|u64 has copy + drop
    pack_closure __lambda__2__make_func_1, 0
    ret

// Function definition at index 1
fun make_func_2(): |u64, u64|||u64 has copy + drop
    pack_closure __lambda__2__make_func_2, 0
    ret

// Function definition at index 2
fun make_func_3(): |u64, u64|||(u64, u64) has copy + drop
    pack_closure __lambda__2__make_func_3, 0
    ret

// Function definition at index 3
fun test()
    local l0: u64
    ld_u64 20
    ld_u64 10
    call make_func_1
    call_closure <|u64||u64|u64 has copy + drop>
    call_closure <|u64|u64>
    // @5
    ld_u64 30
    eq
    br_false l0
    ld_u64 10
    ld_u64 20
    // @10
    call make_func_2
    call_closure <|u64, u64|||u64 has copy + drop>
    call_closure <||u64>
    ld_u64 200
    eq
    // @15
    br_false l1
    ld_u64 10
    ld_u64 20
    call make_func_3
    call_closure <|u64, u64|||(u64, u64) has copy + drop>
    // @20
    call_closure <||(u64, u64)>
    st_loc l0
    ld_u64 10
    eq
    br_false l2
    // @25
    move_loc l0
    ld_u64 20
    eq
    br_false l3
    ret
    // @30
l3: ld_u64 14566554180833181696
    abort
l2: ld_u64 14566554180833181696
    abort
l1: ld_u64 14566554180833181696
    // @35
    abort
l0: ld_u64 14566554180833181696
    abort

// Function definition at index 4
fun __lambda__1__make_func_1(l0: u64, l1: u64): u64
    move_loc l0
    move_loc l1
    add
    ret

// Function definition at index 5
fun __lambda__2__make_func_1(l0: u64): |u64|u64
    move_loc l0
    pack_closure __lambda__1__make_func_1, 1
    ret

// Function definition at index 6
fun __lambda__1__make_func_2(l0: u64, l1: u64): u64
    move_loc l0
    move_loc l1
    mul
    ret

// Function definition at index 7
fun __lambda__2__make_func_2(l0: u64, l1: u64): ||u64
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__make_func_2, 11
    ret

// Function definition at index 8
fun __lambda__1__make_func_3(l0: u64, l1: u64): (u64, u64)
    move_loc l0
    move_loc l1
    ret

// Function definition at index 9
fun __lambda__2__make_func_3(l0: u64, l1: u64): ||(u64, u64)
    move_loc l0
    move_loc l1
    pack_closure __lambda__1__make_func_3, 11
    ret



//# run 0xc0ffee::m::test